<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/all"
            android:icon="@drawable/app"
            android:title="@string/all"/>

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/heart"
            android:title="@string/favorites"/>

        <item
            android:id="@+id/sotred"
            android:icon="@drawable/sorting"
            android:title="@string/sorted"/>

        <item
            android:id="@+id/note_tagging"
            android:icon="@drawable/tag"
            android:title="Collections"/>

        <item
            android:id="@+id/profile"
            android:icon="@drawable/user"
            android:title="@string/profile"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/exit"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>