<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="186dp"
    android:gravity="bottom"
    android:padding="26dp"
    android:background="@drawable/background_top"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/user0"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>