<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SignUpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="240dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintEnd_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/background_top"/>

<ImageView
    android:id="@+id/icon"
    android:layout_width="55dp"
    android:layout_height="55dp"
    android:layout_gravity="center"
    android:layout_marginTop="25dp"
    android:src="@drawable/notebook"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/logo" />

<TextView
    android:id="@+id/create_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:text="@string/create_account"
    app:layout_constraintTop_toBottomOf="@+id/icon"
    android:textSize="27sp"
    android:textColor="@color/white"
    android:visibility="visible" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="2dp"
    android:letterSpacing="0.01"
    android:text="@string/welcome_to_our_family"
    android:layout_marginBottom="5dp"
    app:layout_constraintTop_toBottomOf="@+id/create_text"
    android:textSize="15sp"
    android:textColor="@color/white"
    android:textAlignment="center"
    android:visibility="visible"
    android:id="@+id/log_in"/>


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="30dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/log_in">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_500"
                android:textAlignment="textStart"
                android:textDirection="ltr"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:autofillHints=""
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_500"
                android:textAlignment="textStart"
                android:textDirection="ltr"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none">
            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_500"
                android:textAlignment="textStart"
                android:textDirection="ltr"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:autofillHints=""
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_500"
                android:textAlignment="textStart"
                android:textDirection="ltr"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="none">
            <EditText
                android:id="@+id/confirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_500"
                android:textAlignment="textStart"
                android:textDirection="ltr"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingBottom="30dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                app:backgroundTint="@null" />

        </RelativeLayout>

        <TextView
            android:id="@+id/linkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/blue_700"
            android:layout_gravity="center"
            android:autoLink="web" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>