<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_top"/>

    <ImageView
        android:id="@+id/icon_"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/notebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_back"
        app:layout_constraintTop_toBottomOf="@+id/icon_"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_500"
                    android:textAlignment="textStart"
                    android:textDirection="ltr"
                    android:background="@android:color/transparent"
                    android:minHeight="48dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxBackgroundMode="none"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_500"
                    android:textAlignment="textStart"
                    android:textDirection="ltr"
                    android:background="@android:color/transparent"
                    android:minHeight="48dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remember_me"
                android:textColor="@color/grey_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:text="@string/remember_me"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:paddingBottom="30dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button"
                    app:backgroundTint="@null" />

            </RelativeLayout>
            <TextView
                android:id="@+id/linkSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't Have An Account? Create One"
                android:textColor="@color/blue_700"
                android:layout_gravity="center"
                android:autoLink="web" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>