<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu.MainPageFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_200"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/new_note"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textSize="15sp"/>
                    <ImageView
                        android:id="@+id/add_icon"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/addfile"
                        android:layout_weight="2"
                        android:contentDescription="@string/todo" />
                </LinearLayout>

                <EditText
                    android:id="@+id/fill_title"
                    android:layout_marginStart="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/title"
                    android:textSize="19sp"
                    android:autofillHints=""
                    android:inputType="text" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_weight="0.5">
                    <EditText
                        android:id="@+id/fill_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="7dp"
                        android:hint="@string/content"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:inputType="text" />
                </ScrollView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:spanCount="1"
            tools:itemCount="20"
            tools:listitem="@layout/note_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>