<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    android:orientation="vertical"
    tools:context=".NoteLayoutFragment">

    <TextView
        android:id="@+id/display_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/note_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/display_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:id="@+id/display_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/creation_date"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <Spinner
                android:id="@+id/cat_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/display_title"
                android:layout_margin="10dp"
                android:background="@color/white"
                app:backgroundTint="@null"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/favourite"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:visibility="visible"
            android:layout_gravity="bottom"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="8"
            android:padding="10dp"
            android:background="@drawable/rounded"
            app:srcCompat="@drawable/animation"
            android:contentDescription="@string/todo" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_weight="4"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/edit"
            android:layout_weight="3"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/delete"
            android:layout_weight="3"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/send"
            android:layout_weight="3"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="25sp"
        android:layout_weight="2">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="8dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/display_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Note"
                android:textSize="20sp"
                android:textColor="@color/black"/>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>